--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1>Bonjour</h1>
 <p>Yo wiwi</p>
-<h2>Bonjour Adrien c'est william le bg mécheux</h2>
+<h2>Bonjour Adrien c'est william le bg mécheux et phiphi</h2>
 <img src="logo-app2.png">
