--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <h1>Bonjour</h1>
 <p>Yo wiwi</p>
 <h2>Bonjour Adrien c'est william le bg mécheux et phiphi</h2>
+<form method="post" action="formulaire.php">
+
+<p>
+    On insèrera ici les éléments de notre formulaire.
+</p>
+
+</form>
 <img src="logo-app2.png">
