--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <p>
     On insèrera ici les éléments de notre formulaire.
 </p>
+<input type="text" name="prenom" />
+
+  <input type="submit" value="Valider" />
 
 </form>
 <img src="logo-app2.png">
