logo dans dossier

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Page d'accueil</title>
 </head>
 <body>
-<img src="logo-app2.png">
+<img src="/images/logo-app2.png">
 
 <p>
     On insèrera ici les éléments de notre formulaire.
