--- a/Vue/politiqueDeConfidentialite.html
+++ b/Vue/politiqueDeConfidentialite.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-
+<title>Politique de confidentialité</title>
         <meta charset="utf-8" />
 
         <style>
@@ -18,12 +18,12 @@
 
 <h1>Politique de confidentialit&eacute;.</h1>
 <p><strong>Introduction</strong><br />
-Devant le d&eacute;veloppement des nouveaux outils de communication, il est n&eacute;cessaire de porter une attention particuli&egrave;re &agrave; la protection de la vie priv&eacute;e. 
+Devant le d&eacute;veloppement des nouveaux outils de communication, il est n&eacute;cessaire de porter une attention particuli&egrave;re &agrave; la protection de la vie priv&eacute;e.
 C'est pourquoi, nous nous engageons &agrave; respecter la confidentialit&eacute; des renseignements personnels que nous collectons.
 </p><hr/>
 <h2>Collecte des renseignements personnels</h2>
 <p>
-Nous collectons les renseignements suivants : 
+Nous collectons les renseignements suivants :
 </p>
 <ul>
 			<li>Nom</li>
@@ -36,9 +36,9 @@ Nous collectons les renseignements suivants :
 	</ul>
 
 <p>
-	Les renseignements personnels que nous collectons sont recueillis au travers de formulaires et gr&acirc;ce &agrave; 
+	Les renseignements personnels que nous collectons sont recueillis au travers de formulaires et gr&acirc;ce &agrave;
 	l'interactivit&eacute; &eacute;tablie entre vous et notre site Web.
-	Nous utilisons &eacute;galement, comme indiqu&eacute; dans la section suivante, des fichiers t&eacute;moins et/ou journaux 
+	Nous utilisons &eacute;galement, comme indiqu&eacute; dans la section suivante, des fichiers t&eacute;moins et/ou journaux
 	pour r&eacute;unir des informations vous concernant.
 </p><hr/>
 <h2>Formulaires&nbsp; et interactivit&eacute;:</h2>
@@ -57,7 +57,7 @@ Nous collectons les renseignements suivants :
 	</ul>
 <p>
 	Vos renseignements sont &eacute;galement collect&eacute;s par le biais de l'interactivit&eacute; pouvant s'&eacute;tablir entre vous et notre site Web et ce, de la fa&ccedil;on suivante:
-</p>	
+</p>
 <ul>
 			<li>Statistiques</li>
 			<li>Contact</li>
@@ -73,11 +73,11 @@ Nous collectons les renseignements suivants :
 <h2>Droit d'opposition et de retrait</h2>
 <p>
 	Nous nous engageons &agrave; vous offrir un droit d'opposition et de retrait quant &agrave; vos renseignements personnels.<br />
-	Le droit d'opposition s'entend comme &eacute;tant la possiblit&eacute; offerte aux internautes de refuser que leurs renseignements 
+	Le droit d'opposition s'entend comme &eacute;tant la possiblit&eacute; offerte aux internautes de refuser que leurs renseignements
 	personnels soient utilis&eacute;es &agrave; certaines fins mentionn&eacute;es lors de la collecte.<br />
 </p>
 <p>
-	Le droit de retrait s'entend comme &eacute;tant la possiblit&eacute; offerte aux internautes de demander &agrave; ce que leurs 
+	Le droit de retrait s'entend comme &eacute;tant la possiblit&eacute; offerte aux internautes de demander &agrave; ce que leurs
 	renseignements personnels ne figurent plus, par exemple, dans une liste de diffusion.<br />
 </p>
 <p>
@@ -85,16 +85,16 @@ Nous collectons les renseignements suivants :
 	Code postal : 10 rue de Vanves, Paris 92130<br />	Courriel : camilleszymanski@isep.fr<br />	T&eacute;l&eacute;phone : 0679453623<br />	Section du site web : www.bluehouse.com/<br />	</p><hr/>
 <h2>Droit d'acc&egrave;s</h2>
 <p>
-	Nous nous engageons &agrave; reconna&icirc;tre un droit d'acc&egrave;s et de rectification aux personnes 
+	Nous nous engageons &agrave; reconna&icirc;tre un droit d'acc&egrave;s et de rectification aux personnes
 	concern&eacute;es d&eacute;sireuses de consulter, modifier, voire radier les informations les concernant.<br />
 
-	
+
 	L'exercice de ce droit se fera :<br />
 	Code postal : 10 rue de Vanves, Paris 92130<br />	Courriel : camilleszymanski@isep.fr<br />	T&eacute;l&eacute;phone : 0679453623<br />	Section du site web : www.bluehouse.com/<br />	</p><hr/>
 <h2>S&eacute;curit&eacute;</h2>
 <p>
 
-	Les renseignements personnels que nous collectons sont conserv&eacute;s 
+	Les renseignements personnels que nous collectons sont conserv&eacute;s
 	dans un environnement s&eacute;curis&eacute;. Les personnes travaillant pour nous sont tenues de respecter la confidentialit&eacute; de vos informations.<br />
 	Pour assurer la s&eacute;curit&eacute; de vos renseignements personnels, nous avons recours aux mesures suivantes :
 </p>
@@ -107,9 +107,9 @@ Nous collectons les renseignements suivants :
 						</ul>
 
 <p>
-	Nous nous engageons &agrave; maintenir un haut degr&eacute; de confidentialit&eacute; en int&eacute;grant les derni&egrave;res innovations technologiques permettant d'assurer 
-	la confidentialit&eacute; de vos transactions. Toutefois, comme aucun m&eacute;canisme n'offre une s&eacute;curit&eacute; maximale, une part de risque est toujours pr&eacute;sente 
-	lorsque l'on utilise Internet pour transmettre des renseignements personnels. 
+	Nous nous engageons &agrave; maintenir un haut degr&eacute; de confidentialit&eacute; en int&eacute;grant les derni&egrave;res innovations technologiques permettant d'assurer
+	la confidentialit&eacute; de vos transactions. Toutefois, comme aucun m&eacute;canisme n'offre une s&eacute;curit&eacute; maximale, une part de risque est toujours pr&eacute;sente
+	lorsque l'on utilise Internet pour transmettre des renseignements personnels.
 </p>
 </body>
 </html>
