Améliorations ésthétiques gestion des capteurs/message

--- a/Vue/infos_notes.html
+++ b/Vue/infos_notes.html
@@ -2,7 +2,7 @@
 <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 <div class="infos_note">
 
-  <hr class="ligne" width="1px" size="300px" />
+  <div class="ligne"></div>
   <h3 class="titreDescription">Déposez une note !</h3>
 <p class="description">
   Vous pouvez ici déposez une note d'informations pour la maison.</br>Celle-ci sera visible par tout les utilisateurs de la maison.
